Update pom to fix JavaFX native access, minor changes after pulling from main